server/ingress/test/custom/dev-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
spec:
  tls:
  - hosts:
      - dev.tazamun.com.sa
    secretName: my-secret
  ingressClassName: nginx
  rules:
  - host: "dev.tazamun.com.sa"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: odoo
            port:
              number: 8069
